...
                    ButtonComponent (
                        buttonAction: {
                            start = true
                        },
                        text: String(localized: "Start Game")
                    )
                    .accessibilityIdentifier("startGameButton")
                }
                .padding(.top, 30)
                
                
            }
            .onAppear {
...
