...
                
                
                VStack(spacing: 24) {
                    VStack(spacing: 8) {
                        Text("ROOM CODE")
                            .font(.custom("Toy Block Maestro", size: 55))
                            .accessibilityIdentifier("hostTitle")
                        Text(
                            "Share the room code so your friends can join!"
                        )
                        .font(.custom("Poppins Regular", size: 15))
                        .multilineTextAlignment(.center)
                    }
...
