...
                BackButtonComponent()
                
                VStack(spacing: 16) {
                    VStack(spacing: 8) {
                        Text("Enter the game")
                            .font(.custom("Toy Block Maestro", size: 40))
                            .accessibilityIdentifier("joinTitle")
                        Text(
                            "Enter the room code to start the game."
                        )
                        .font(.custom("Poppins Regular", size: 12))
                        .multilineTextAlignment(.center)
                    }
...
